--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-	 <!-- Bootstrap -->
+
+	<!-- Bootstrap -->
     <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -15,26 +16,25 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css"/> -->
+	<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/wingcss/0.1.8/wing.min.css"/-->
 	<link rel="stylesheet" href="css/loader.css"/>
 	<link rel="stylesheet" href="css/main.css"/>
 </head>
 
-<body onload="init();">
+<body onload="setTimeout(init, 150);">
 
 	<div id="loader">
-	
+		<!--img src="./images/logo.png" class="loading-logo" width="274px" /-->
+
 		<div id="spinner" class="active">
-			<img src="./images/logo.png" class="loading-logo" width="274px" />
-	        <span id="first" class="ball"></span>
+			<span id="first" class="ball"></span>
 	        <span id="second" class="ball"></span>
 	        <span id="third" class="ball"></span>
 		</div>
 	</div>
+	<div class='logo'></div>
 
-	<!-- <div id="container" class="container"> -->
 	<div class="container all-center">
-		<div class='logo'></div>
 
 		<div id="small-modal" class='modal-container'>
 			<div class="small-modal">
@@ -42,13 +42,13 @@
 				<div class="body-text">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
 					<hr />
-					<a href="#" >Ver más</a>
+					<a onclick="changeToBigModal()" >Ver más</a>
 				</div>
 			</div>
 			<div class="image pull-left">
-				<img src="https://unsplash.it/160/120?random" />
+				<img src="https://unsplash.it/160/120" />
 			</div>
-		</div>
+			</div>
 		</div>
 
 		<div id="big-modal" class='modal-container'>
@@ -67,7 +67,7 @@
 				<div class="row">
 					<div class="col-xs-6">
 						<div class="image">
-							<img src="https://unsplash.it/480/320?random" />
+							<img src="https://unsplash.it/460/320" />
 						</div>
 					</div>
 					<div class="col-xs-6">
@@ -97,7 +97,6 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 
 	<div id="ThreeJS" style="position: absolute; left:0px; top:0px"></div>
@@ -109,7 +108,7 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script src="js/Three.js"></script>
+<script src="js/three.js"></script>
 <script src="js/THREEx.KeyboardState.js"></script>
 <script src="js/Cluster.js"></script>
 <script src="js/main.js"></script>
